<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_above="@+id/saveButton"
       android:orientation="vertical">
       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/name"
           android:hint="@string/name"
           android:layout_margin="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />
       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/username"
           android:hint="@string/username"
           android:layout_margin="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />
       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/password"
           android:hint="@string/password"
           android:layout_margin="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />
   </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/primaryColor"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textStyle="bold" />

</RelativeLayout>